Fixed header letter-spacing issue

--- a/Minimal.css
+++ b/Minimal.css
@@ -930,7 +930,7 @@ MINIMAL STYLING */
 
 h1,h2,h3,h4,h5,strong {font-weight:var(--bold-weight);}
 /*h1,h2,h3,h4 {letter-spacing:-0.02em;} */
-h1,h2,h3,h4 {letter-spacing:10em;}
+h1,h2,h3,h4 {letter-spacing:0.1em;}
 
 body, input, button  {
   font-family:var(--font-ui);
@@ -980,7 +980,7 @@ body, input, button,
 .markdown-preview-view h1,
 .HyperMD-header-1,
 .cm-header-1 {
-  letter-spacing:-0.02em;
+  letter-spacing:0.02em;
   font-size:var(--h1);
   line-height:1.3;
   font-weight:var(--bold-weight);
@@ -988,7 +988,7 @@ body, input, button,
 .markdown-preview-view h2,
 .HyperMD-header-2,
 .cm-header-2 {
-  letter-spacing:-0.02em;
+  letter-spacing:0.02em;
   font-size:var(--h2);
   line-height:1.3;
   font-weight:var(--bold-weight);
